2005-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  debugging cleanups for better feedback

2005-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_audio_encoder.glade:
	* data/glade/wizard_audiotest.glade:
	* data/glade/wizard_encoding.glade:
	* data/glade/wizard_http.glade:
	* data/glade/wizard_jpeg.glade:
	* data/glade/wizard_license.glade:
	* data/glade/wizard_overlay.glade:
	* data/glade/wizard_smoke.glade:
	* data/glade/wizard_soundcard.glade:
	* data/glade/wizard_theora.glade:
	* data/glade/wizard_tvcard.glade:
	* data/glade/wizard_vorbis.glade:
	* data/glade/wizard_webcam.glade:
	  UI cleanups:
	  - align labels on the left
	  - add/fix accessors
	  - various tweaks

2005-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* flumotion/component/encoders/encoders.xml:
	* flumotion/component/encoders/vorbis.py:
	  downsample audio based on chosen bitrate
	  fixes issue #183

2005-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	  clarify other error condition
	* flumotion/component/effects/volume/volume.glade:
	  change UI a little to fit in panes and implement "distort" checkbox
	  use custom widget for level indicator with create function
	* flumotion/component/effects/volume/admin_gtk.py:
	  implement handling of the new ui
	* flumotion/component/effects/volume/volume.py:
	  use float multiplier values, not percentages
	* flumotion/component/producers/soundcard/admin_gtk.py:
	  make sure soundcard gets volumeSet for view node
	* flumotion/component/producers/firewire/firewire.py:
	  change value to be a multiplier
	* flumotion/component/producers/soundcard/soundcard.py:
	  make it clear we still need to implement setVolume

2005-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py: